# ddebug

./: .gitignore  pyproject.toml  readme.md  requirements.txt
ddebug/: LICENSE  __init__.py  __main__.py  _errors.py  dd_class.py  dd_util.py  errors.py  richlib.py  watch.py  watchlib.py
examples/: ZeroDivision.py  print_diff.py  print_stack.py
tests/: test_dd.py
