[tool.poetry]
name = "ddebug"
version = "0.4.8"
description = "python library with a set of tools for simple debugging of python programs"
authors = ["matan h <matan.honig2@gmail.com>"]
license = "MIT"

readme = "readme.md"
homepage = "https://github.com/matan-h/ddebug"
# repository = "https://github.com/matan-h/ddebug"
# documentation = "https://github.com/matan-h/ddebug"
keywords = [
    "ddebug",
    "debug",
    "simple",
    "quick",
    "easy",
    "dd",
    "debuging"
]

[tool.poetry.dependencies]
python = ">=3.7.12,<4.0" # the <4.0 is because rich Python requirement
snoop = ">=0.3,<0.5" # main require
icecream = "^2.1.0" # main require
rich = "^10.5.0" # main require
friendly-traceback = ">=0.4.70,<0.6.0" # dd-traceback errors require
# optional
watchpoints = { version =">=0.2.5,<0.3.0",optional = true } # watch require
deepdiff = { version ="^5.7.0",optional = true } # dd.diff require
pdbr = { version =">=0.6.9,<0.8.0",optional = true } # post pdb require
inputimeout = { version ="^1.0.0",optional = true } # post pdb require



[tool.poetry.extras]
full = ["watchpoints", "deepdiff", "pdbr", "inputimeout"]
no-pdbr = ["watchpoints"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.poetry.urls]
issues = "https://github.com/matan-h/ddebug/issues"