[tool.poetry]
name = "ddebug"
version = "0.4.8"
description = "python library with a set of tools for simple debugging of python programs"
authors = ["matan h <matan.honig2@gmail.com>"]
license = "MIT"

readme = "readme.md"
homepage = "https://github.com/matan-h/ddebug"
# repository = "https://github.com/matan-h/ddebug"
# documentation = "https://github.com/matan-h/ddebug"
keywords = [
    "ddebug",
    "debug",
    "simple",
    "quick",
    "easy",
    "dd",
    "debuging"
]

[tool.poetry.dependencies]
python = "^3.7.12"
# snoop = ">=0.3,<0.5" # main require
snoop = "^0.4.1" # main require
icecream = "^2.1.2" # main require
rich = "^12.0.0" # main require
friendly-traceback = ">=0.5.46,<0.7.0" # dd-traceback errors require
# optional
watchpoints = "^0.2.5" # watch require
deepdiff = "^5.8.1" # dd.diff require
pdbr = "^0.7.1" # post pdb require
inputimeout = "^1.0.4" # post pdb require



[tool.poetry.extras]
full = ["watchpoints", "deepdiff", "pdbr", "inputimeout"]
no-pdbr = ["watchpoints","deepdiff"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.poetry.urls]
issues = "https://github.com/matan-h/ddebug/issues"